cmake_minimum_required(VERSION 3.20)
project(TP_AlgoAv C)

set(CMAKE_C_STANDARD 99)

add_executable(
        TP_AlgoAv
#        src/tp0/list/maListe.c src/tp0/list/liste.c src/tp0/list/liste.h
#        src/tp0/tree/monArbre.c src/tp0/tree/arbre.c src/tp0/tree/arbre.h
#        src/tp1/graph/monGraphe.c src/tp1/graph/graphe.c src/tp1/graph/graphe.h

#        src/tp2/main.c src/tp2/fifo/fifo.c src/tp2/fifo/fifo.h
#        src/tp1/graph/graphe.c src/tp1/graph/graphe.h
#        src/tp0/list/liste.c src/tp0/list/liste.h

#        src/tp4/testPrim.c src/tp4/prim.c src/tp4/prim.h
        src/tp5/main.c)
